<resources>
    <string name="app_name">WearWeather</string>
    <string name="app_version">Version 1.0.3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- WearWeather String -->
    <string name="today_weather">날씨</string>
    <string name="fine_dust">미세먼지</string>
    <string name="dress_by_temperature">기온별 옷차림</string>
    <string name="weather_forecast">일기예보</string>
    <string name="settings">설정</string>
    <string name="basic_temperature">0 °C</string>
    <string name="temperature_unit">°C</string>
    <string name="bodily_temprature">체감온도</string>
    <string name="precipitation">강수량</string>
    <string name="precipitation_unit">mm</string>
    <string name="temperature_max">최고온도</string>
    <string name="temperature_min">최저온도</string>
    <string name="pressure">기압</string>
    <string name="pressure_unit">hPa</string>
    <string name="humidity">습도</string>
    <string name="sunrise">일출</string>
    <string name="sunset">일몰</string>

    <string name="percent_unit">%</string>

    <string name="address_setting">주소 설정</string>
    <string name="address_find">주소 검색하기</string>
    <string name="address_redirect">현재 위치로 주소 설정하기</string>
    <string name="favorites_setting">즐겨찾기 설정</string>
    <string name="favorites_manage">즐겨찾기 관리하기</string>
    <string name="plz_enter_address">주소를 입력하세요</string>
    <string name="open_source">오픈 소스 라이선스</string>
    <string name="information">정보</string>

    <string name="license_information">
        COPYRIGHT © 머시따. ALL RIGHTS RESERVED.\n
        머시따(https://meosidda.com/index.html)\n\n

        COPYRIGHT © Look at Min ALL RIGHTS RESERVED.\n
        룩앳민(http://lookatmin.com/)\n

        \n\n*위 쇼핑몰들로부터 이미지 사용 허락을 받아 제작하였습니다.\n\n

        COPYRIGHT 2019 © 연합뉴스TV::대한민국 뉴스의 시작. 채널 23 ALL RIGHTS RESERVED.\n

        연합뉴스 RSS(https://www.yonhapnewstv.co.kr/add/rss)\n
        연합뉴스 날씨 Feed(https://www.yonhapnewstv.co.kr/category/news/weather/feed/)\n
        (주)연합뉴스TV 서울특별시 종로구 율곡로 2길(수송동)\n
        대표자 : 조성부\n
        대표전화 : 02-398-7800\n

        \n\n*날씨 뉴스 출처는 위 사이트로 부터 받아 제작하였습니다.

    </string>
</resources>