<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item
            android:id="@+id/nav_dust"
            android:icon="@drawable/dust"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:title="@string/fine_dust"/>

        <item
            android:id="@+id/nav_clothing"
            android:icon="@drawable/outfit"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:title="@string/dress_by_temperature"/>
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/forecast"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:title="@string/weather_forecast"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/setting"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:title="@string/settings"/>
    </group>

</menu>
