<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorWhite">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="20dp"
            android:src="@drawable/icon_back"
            android:tint="@color/colorBlack"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="설정"
            android:textColor="@color/colorBlack"
            android:textSize="22sp"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/icon_location"
            android:tint="@color/colorDarkGray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/address_setting"
            android:textSize="16sp"
            android:textColor="@color/colorDarkGray"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/item_settings_background"
        android:paddingHorizontal="20dp">

        <TextView
            android:id="@+id/settings_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/address_find"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical|right"
            android:rotation="180"
            android:src="@drawable/icon_back"
            android:tint="#aaa"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/redirect_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/item_settings_background"
        android:paddingHorizontal="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/address_redirect"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical|right"
            android:rotation="180"
            android:src="@drawable/icon_back"
            android:tint="#aaa"/>

    </FrameLayout>

<!--    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/icon_star"
            android:tint="@color/colorDarkGray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/favorites_setting"
            android:textSize="16sp"
            android:textColor="@color/colorDarkGray"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/settings_favorites"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/item_settings_background"
        android:paddingHorizontal="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/favorites_manage"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical|right"
            android:rotation="180"
            android:src="@drawable/icon_back"
            android:tint="#aaa"/>

    </FrameLayout>-->

</LinearLayout>